# leonardo-questionaire

./: README.rst  setup.cfg
leonardo_questionaire/: __init__.py  models.py  overrides.py
leonardo_questionaire/locale/cs/LC_MESSAGES/: django.po
leonardo_questionaire/migrations/: 0001_initial.py
leonardo_questionaire/templates/widget/questionaire/: default.html
leonardo_questionaire/templatetags/: questionaire_tags.py
leonardo_questionaire/widget/: __init__.py
leonardo_questionaire/widget/questionaire/: models.py
