[metadata]
name = leonardo-questionaire
summary = Adds user specific handling of Leonardo forms
description-file =
    README.rst
author = Adam Tengler
author-email = adam.tengler@tcpcloud.eu
home-page = https://github.com/django-leonardo/leonardo-questionaire.git
classifier =
    Development Status :: 5 - Production/Stable
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Topic :: Software Development
    Topic :: Software Development :: Libraries :: Application Frameworks

[files]
packages =
    leonardo_questionaire
